api-specifications/istio-config.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: model-serving-traffic
spec:
  hosts:
    - model-serving.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: model-serving.default.svc.cluster.local
            subset: v1
          weight: 80
        - destination:
            host: model-serving.default.svc.cluster.local
            subset: v2
          weight: 15
        - destination:
            host: model-serving.default.svc.cluster.local
            subset: v3
          weight: 5
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: model-serving-destination
spec:
  host: model-serving.default.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
    - name: v3
      labels:
        version: v3
